# cpp-cmake-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all.sh  build.sh  configure.sh  run.sh  test.sh
include/: simple.hpp
source/: main.cpp  simple.cpp
test/: CMakeLists.txt  hello_test.cpp
